# async-rust-scraper

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml
data/: mydatabase.db
src/: main.rs
src/db/: operations.rs
src/migrations/: init.sql
src/scraper/: client.rs  mod.rs  model.rs  parser.rs
src/utils/: rate_limiter.rs
test/: integration_test.rs
