[package]
name = "async-rust-scraper"
version = "0.1.0"
edition = "2021"
description = "Async scraper with sqlite insertion"
license = "MIT"
repository = "https://github.com/dhodyrev/async-rust-scraper"
documentation = "https://docs.rs/async-rust-scraper"
homepage = "https://github.com/dhodyrev/async-rust-scraper"
readme = "README.md"

[dependencies]
log = "0.4"
env_logger = "0.10"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
scraper = "0.12"
sqlx = { version = "0.5", features = ["sqlite", "runtime-tokio-rustls"] }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
